Fix video width on small screen widths
When the screen width gets small enough to clip the video, reduce the
width of the video to the content width.

Couldn't use the same larger-than-content-width layout, at least not
easily, because the percentage would need to be dependent on the window
width, not the width of the video element's container.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -167,6 +167,12 @@ ul {
 	color: #c9ccb4;
 	text-shadow: 1px 3px 5px #230f0f;
 }
+@media screen and (max-width: 870px) {
+	.content video {
+		width: 100%;
+		margin-left: 0;
+	}
+}
 @media screen and (max-width: 767px) {
 	header {
 		margin-left: -8px;
